Fix: widget menu not visible on small widgets

--- a/client/app/pages/dashboards/dashboard.less
+++ b/client/app/pages/dashboards/dashboard.less
@@ -5,7 +5,6 @@
     top: 0;
     right: 0;
     bottom: 0;
-    overflow: hidden;
     margin: 0;
     padding: 0;
   }
